--- a/beta/index.html
+++ b/beta/index.html
@@ -314,6 +314,7 @@ setInterval(changeName, 50)
     <script src="js/tiles.js"></script>
     <script src="js/settings.js"></script>
     <script src="js/images.js"></script>
+    <script src="js/tiles-button.js"></script>
    </div>
   </body>
 </html>
