--- a/beta/index.html
+++ b/beta/index.html
@@ -240,6 +240,8 @@ setInterval(changeName, 50)
        </div>
        <div id="tiles-searchbox" style="list-style: none; display: none;">
        </div>
+    <div class="kc_fab_wrapper">
+    </div>
   </div>
  <div id="tisheets" style="display: none;">
   <h3>TiSheets</h3>
