--- a/beta/index.html
+++ b/beta/index.html
@@ -94,6 +94,8 @@ setInterval(changeName, 50)
   
     <input id="chat" class="form-control" style="display: none;" autofocus><br>
     <button id="joinChatBtn" onclick="joinChat()" class="btn btn-primary" style="display: none;">Create/Join Chat</button>
+  <h3 id="random-password-notice" style="display: none;"> Or Generate A Random 9 Digit Password </h3>
+  <button id="random-password-btn" onclick="randomTiChatPassword()" class="btn btn-primary" style="display: none;">Generate Random Chat Password</button>
 
   <div style="display: none" id="tiritype">
     <center>
