--- a/beta/index.html
+++ b/beta/index.html
@@ -80,8 +80,9 @@ setInterval(changeName, 50)
   </script>
   <center>
     <h3> Tiri </h3>
-    <img onclick="window.location.href = 'index.html?app=5'" src="other resources/microphone.png" alt="Microphone -Tiri " height="100" width="100">
+    <img onclick="window.location.href = 'index.html?app=5'" src="other resources/microphone.png" alt="Microphone - Tiri " height="100" width="100">
     <h5 id="mutemessage"></h5>
+    <h3 id="chat-password-label" style="display: none;"></h3>
    <div id="HCB_comment_box">Loading comments...</div>
  - <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506458898957");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
  -</div>
