--- a/beta/index.html
+++ b/beta/index.html
@@ -216,6 +216,11 @@ setInterval(changeName, 50)
         <button onclick="lastTile()" class="btn btn-success">Open The Last Opened Tile</button><br><br>
         <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br>
        </div>
+       <div id="tiChatSettings">
+         <h4> TiChat Settings </h4>
+         <h6> Show TiChat Password allows easy access to the TiChat's password as it is displayed at the top of the chat. However, if this feature is used in a public area, it could hold a privacy risk. Due to this fact, Show TiChat Password is disabled by default but this can be changed in settings. </h6>
+         <button style="display: none;" id="show-chat-password" onclick="showChatPassword()" class="btn btn-primary">Enable Show Chat Password</button><br><br>
+         <button style="display: none;" id="hide-chat-password" onclick="hideChatPassword()" class="btn btn-primary">Disable Show Chat Password</button><br><br>        
   </div>
   <div id="tiles" style="display: none;">
        <h3>Tiles</h3><br>
