--- a/beta/index.html
+++ b/beta/index.html
@@ -220,8 +220,8 @@ setInterval(changeName, 50)
        <div id="tiChatSettings">
          <h4> TiChat Settings </h4>
          <h6> Show TiChat Password allows easy access to the TiChat's password as it is displayed at the top of the chat. However, if this feature is used in a public area, it could hold a privacy risk. Due to this fact, Show TiChat Password is disabled by default but this can be changed in settings. </h6>
-         <button style="display: block;" id="show-chat-password" onclick="showChatPassword()" class="btn btn-primary">Enable Show Chat Password</button>
-         <button style="display: none;" id='hide-chat-password' onclick="hideChatPassword()" class="btn btn-primary">Disable Show Chat Password</button>
+         <button id="show-chat-password" onclick="showChatPassword()" class="btn btn-primary">Enable Show Chat Password</button>
+         <button id='hide-chat-password' onclick="hideChatPassword()" class="btn btn-primary">Disable Show Chat Password</button>
        </div>
   </div>
   <div id="tiles" style="display: none;">
