--- a/beta/index.html
+++ b/beta/index.html
@@ -82,10 +82,13 @@ setInterval(changeName, 50)
     <h3> Tiri </h3>
     <img onclick="window.location.href = 'index.html?app=5'" src="other resources/microphone.png" alt="Microphone - Tiri " height="100" width="100">
     <h5 id="mutemessage"></h5>
-    <h3 id='chat-password-label' style="display: none;"></h3>
+    <div id="chat-password-label" style="display: none;"
+    <button id="show-chat-password-label-btn" onclick="showChatPassword()" class="btn btn-primary>Show Chat Password</button>
+    <h3 id='chat-password-label-text' style="display: none;"></h3>
+  </div>
    <div id="HCB_comment_box">Loading comments...</div>
- - <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506458898957");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
- -</div>
+  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506458898957");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+  </div>
   </center>
 <div style="display: none;" id="messages">
     <h3>TiChat</h3><br>
