--- a/beta/index.html
+++ b/beta/index.html
@@ -82,7 +82,7 @@ setInterval(changeName, 50)
     <h3> Tiri </h3>
     <img onclick="window.location.href = 'index.html?app=5'" src="other resources/microphone.png" alt="Microphone - Tiri " height="100" width="100">
     <h5 id="mutemessage"></h5>
-    <div id="chat-password-label" style="display: none;">
+    <div style="display: none;" id="chat-password-label">
     <button id="show-chat-password-label-btn" onclick="showChatPassword()" class="btn btn-primary>Show Chat Password</button>
     <h3 id='chat-password-label-text' style="display: none;"></h3>
   </div>
