--- a/beta/index.html
+++ b/beta/index.html
@@ -288,9 +288,11 @@ setInterval(changeName, 50)
   <canvas id="myCanvas" width="1000" height="600" style="border:1px solid #d3d3d3;"></canvas><br>
   <button class="btn btn-primary" onclick="addText()">Add Text</button>
 </div>
-  <div id="HCB_comment_box" style="display: none;">Connecting to <b>Tiles</b> database.</div>
- <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506539939724");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<div id="tismile" style="display: none;">
+  <h3>TiSmile</h3>
+  <video style="border-radius: 30px; background-color: black;" id="tismile-video" width="640" height="480" autoplay></video><br>
+  <button class="btn btn-primary" onclick="setupTiSmile()">Setup TiSmile</button>
+</div>
 </div>
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
