--- a/beta/index.html
+++ b/beta/index.html
@@ -293,7 +293,7 @@ setInterval(changeName, 50)
   <button class="btn btn-primary" id="tismile-setup-button" onclick="setupTiSmile(0)">Setup TiSmile</button>
   <div id="tismile-stage1" style="display: none;">
     <h5>Position your face.</h5>
-    <p>Adjust your face and click next.</p><br>
+    <p>Adjust your face and click continue.</p><br>
     <video style="display: none;" id="tismile-video" width="640" height="480" autoplay></video><br>
     <button class="btn btn-primary" onclick="setupTiSmile(1)">Continue</button>
   </div>
@@ -301,14 +301,14 @@ setInterval(changeName, 50)
   <div id="tismile-stage2" style="display: none;">
     <h5>Adjust your security.</h5>
     <p>Choose the precision of TiSmile and click finish.</p><br>
-    <input type="range" min="1" max="100" value="50" id="tismile-security">
+    <input type="range" min="1" max="100" value="50" style="width: 250px;" id="tismile-security"><br>
     <button class="btn btn-primary" onclick="setupTiSmile(2)">Finish</button>
   </div>
   
   <div id="tismile-stage3" style="display: none;">
+    <span style="font-size: 750%; color: green;" class="glyphicon glyphicon-check"></span><br>
     <h5>You're all set!</h5>
-    <p>You can now login with TiSmile.</p><br>
-    <span style="font-size: 750%; color: green;" class="glyphicon glyphicon-check"></span>
+    <p>You can now login with TiSmile.</p>
   </div>
 </div>
 <h5 style="display: none;" id="view"></h5><br>
