--- a/beta/index.html
+++ b/beta/index.html
@@ -308,9 +308,11 @@ setInterval(changeName, 50)
   </div>
   
   <div id="tismile-stage3" style="display: none;">
-    <span style="font-size: 750%; color: green;" class="glyphicon glyphicon-check"></span><br>
-    <h5>You're all set!</h5>
-    <p>You can now login with TiSmile.</p>
+    <center>
+      <span style="font-size: 1500%; color: green;" class="glyphicon glyphicon-check"></span><br>
+      <h5>You're all set!</h5>
+      <p>You can now login with TiSmile.</p>
+    </center>
   </div>
 </div>
 <h5 style="display: none;" id="view"></h5><br>
