--- a/beta/index.html
+++ b/beta/index.html
@@ -291,8 +291,11 @@ setInterval(changeName, 50)
 </div>
 <div id="tismile" style="display: none;">
   <h3>TiSmile</h3>
-  <p><b>Note: This feature is in beta.</b> TiSmile is an easy and convenient way to login to TiMedia! Click setup TiSmile to begin.</p>
-  <button class="btn btn-primary" id="tismile-setup-button" onclick="setupTiSmile(0)">Setup TiSmile</button>
+  <div id="tismile-main">
+    <p><b>Note: This feature is in beta.</b> TiSmile is an easy and convenient way to login to TiMedia! Click setup TiSmile to begin.</p>
+    <button class="btn btn-primary" onclick="setupTiSmile(0)">Setup TiSmile</button>
+  </div>
+  
   <div id="tismile-stage1" style="display: none;">
     <h5>Position your face.</h5>
     <p>Adjust your face and click continue.</p><br>
