--- a/beta/index.html
+++ b/beta/index.html
@@ -299,7 +299,7 @@ setInterval(changeName, 50)
   <div id="tismile-stage1" style="display: none;">
     <h5>Position your face.</h5>
     <p>Adjust your face and click continue.</p><br>
-    <video style="display: none;" id="tismile-video" width="640" height="480" autoplay></video><br>
+    <video style="border-radius: 30px; background-color: black;" id="tismile-video" width="640" height="480" autoplay></video><br>
     <button class="btn btn-primary" onclick="setupTiSmile(1)">Continue</button>
   </div>
   
@@ -312,7 +312,7 @@ setInterval(changeName, 50)
   
   <div id="tismile-stage3" style="display: none;">
     <center>
-      <span style="font-size: 1500%; color: green;" class="glyphicon glyphicon-check"></span><br>
+      <span style="font-size: 1500%; color: #00a87b;" class="glyphicon glyphicon-check"></span><br>
       <h3>You're all set!</h3>
       <p>You can now login with TiSmile.</p>
     </center>
