--- a/beta/login.html
+++ b/beta/login.html
@@ -31,16 +31,17 @@
     </nav>
 
 <div class="container">
-  <h3>Login</h3><br>
-
-    Username<br>
-    <input type="text" id="login-username" class="form-control"><br>
-
-    Password<br>
-    <input type="password" id="login-password" class="form-control"><br>
-    <p id="error" style="color: red;"></p>
-    <button onclick="login()" id="login-btn" class="btn btn-primary">Login</button><br><br>
-
+    <div id="login-user">
+    <h3>Login</h3><br>
+  
+      Username<br>
+      <input type="text" id="login-username" class="form-control"><br>
+  
+      Password<br>
+      <input type="password" id="login-password" class="form-control"><br>
+      <p id="error" style="color: red;"></p>
+      <button onclick="login()" id="login-btn" class="btn btn-primary">Login</button><br><br>
+    </div>
     <div id="login-tismile" style="display: none;">
       <h3>Login with TiSmile</h3>
       <video style="border-radius: 30px; background-color: black;" id="tismile-video" width="640" height="480" autoplay></video><br>
