--- a/beta/login.html
+++ b/beta/login.html
@@ -45,7 +45,8 @@
     <div id="login-tismile" style="display: none;">
       <h3>Login with TiSmile</h3>
       <video style="border-radius: 30px; background-color: black;" id="tismile-video" width="640" height="480" autoplay></video><br>
-      <h5 id="status">Looking for face...</h5>
+      <h5 id="status">Looking for face...</h5><br>
+      <a href="#" onclick="loginPassword()">Login with password instead.</a>
     </div>
 </div>
 
