--- a/beta/index.html
+++ b/beta/index.html
@@ -302,6 +302,7 @@ setInterval(changeName, 50)
     <p>Adjust your face and click continue.</p><br>
     <video style="border-radius: 30px; background-color: black;" id="tismile-video" width="640" height="480" autoplay></video><br>
     <button class="btn btn-primary" onclick="setupTiSmile(1)">Continue</button>
+    <canvas style="display: none;" id="tismile-canvas"></canvas>
   </div>
   
   <div id="tismile-stage2" style="display: none;">
