--- a/beta/login.html
+++ b/beta/login.html
@@ -47,6 +47,7 @@
       <video style="border-radius: 30px; background-color: black;" id="tismile-video" width="640" height="480" autoplay></video><br>
       <h5 id="status">Looking for face...</h5>
       <a href="#" onclick="loginPassword()">Login with password instead.</a>
+      <canvas id="tismile-canvas" style="display: none;"></canvas>
     </div>
 </div>
 
