--- a/beta/index.html
+++ b/beta/index.html
@@ -38,7 +38,7 @@
                 <li><a href="?app=4">TiSheets <span class="glyphicon glyphicon-th-list"></span></a></li>
                 <li><a href="?app=9">TiSlides <span class="glyphicon glyphicon-blackboard"></span></a></li>
                 <li><a href="?app=10">TiBookmarks <span class="glyphicon glyphicon-bookmark"></span></a></li>
-                <li><a href="?app=11">TiSmile <span class="glyphicon glyphicon-user"></span></a></li>
+                <li id="ti-smile-app"><a href="?app=11">TiSmile <span class="glyphicon glyphicon-user"></span></a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="?app=8">New App <span class="glyphicon glyphicon-plus"></span></a></li> 
               </ul>
