--- a/beta/index.html
+++ b/beta/index.html
@@ -38,7 +38,7 @@
                 <li><a href="?app=4">TiSheets <span class="glyphicon glyphicon-th-list"></span></a></li>
                 <li><a href="?app=9">TiSlides <span class="glyphicon glyphicon-blackboard"></span></a></li>
                 <li><a href="?app=10">TiBookmarks <span class="glyphicon glyphicon-bookmark"></span></a></li>
-                <li id="ti-smile-app"><a href="?app=11">TiSmile <span class="glyphicon glyphicon-user"></span></a></li>
+                <li id="ti-smile-app"><a href="?app=11">TiSmile <b>Beta 3</b><span class="glyphicon glyphicon-user"></span></a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="?app=8">New App <span class="glyphicon glyphicon-plus"></span></a></li> 
               </ul>
@@ -289,7 +289,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <button class="btn btn-primary" onclick="addText()">Add Text</button>
 </div>
 <div id="tismile" style="display: none;">
-  <h3>TiSmile</h3>
+  <h3>TiSmile <b>Beta 3</b></h3>
   <div id="tismile-main">
     <p><b>Note: This feature is in beta.</b> TiSmile is an easy and convenient way to login to TiMedia! Click setup TiSmile to begin.</p>
     <button class="btn btn-primary" id="tismile-enable" onclick="setupTiSmile(0)">Setup TiSmile</button>
