--- a/beta/index.html
+++ b/beta/index.html
@@ -291,7 +291,8 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 <div id="tismile" style="display: none;">
   <h3>TiSmile <b>Beta</b></h3>
   <div id="tismile-main">
-    <p><b>Note: This feature is in beta.</b> TiSmile is an easy and convenient way to login to TiMedia! Click setup TiSmile to begin.</p>
+    <img src="other resources/smile.png" width="100" height="100"><br>
+    <h4>Unlock with a smile.</h4><br>
     <button class="btn btn-primary" id="tismile-enable" onclick="setupTiSmile(0)">Setup TiSmile</button>
     <button class="btn btn-danger" id="tismile-disable" onclick="disableTiSmile()">Disable TiSmile</button>
   </div>
