--- a/beta/index.html
+++ b/beta/index.html
@@ -292,7 +292,9 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <h3>TiSmile <b>Beta</b></h3>
   <div id="tismile-main">
     <img src="other resources/smile.png" width="100" height="100"><br>
-    <h4>Unlock with a smile.</h4><br>
+    <h4>Unlock with a smile.</h4>
+    <p>TiSmile makes it easier than ever to unlock your account.<br>
+      Just look up, make a smile, and you're in!</p><br>
     <button class="btn btn-primary" id="tismile-enable" onclick="setupTiSmile(0)">Setup TiSmile</button>
     <button class="btn btn-danger" id="tismile-disable" onclick="disableTiSmile()">Disable TiSmile</button>
   </div>
