--- a/beta/index.html
+++ b/beta/index.html
@@ -223,11 +223,11 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
        <div id="securitySettings">
          <h4> Security </h4>
          <h5> Logging in </h5>
-       <img src="other resources/smile.png" width="100" height="100"><br>
+         <img src="other resources/smile.png" width="100" height="100"><br>
          <h4><b>Introducing TiSmile</b> - Unlock with a smile.</h4>
         <p>TiSmile makes it easier than ever to unlock your account.<br>
         Just look up, make a smile, and you're in!</p><br>
-        <button onclick ="window.location.href="index.html?app=11" class="btn btn-primary">Open TiSmile Preferences</button><br>
+        <button onclick="window.location.href="index.html?app=11"" class="btn btn-primary">Open TiSmile Preferences</button><br>
         </div>                                                                                  
   </div>
   <div id="tiles" style="display: none;">
