--- a/beta/index.html
+++ b/beta/index.html
@@ -220,9 +220,8 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
         <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br>
        </div>
        <br>
-       <div id="securitySettings">
-         <h4> Security </h4>
-         <h5> Logging in </h5>
+       <div id="tismileSettings">
+         <h4> TiSmile </h4>
          <img src="other resources/smile.png" width="100" height="100"><br>
          <h4><b>Introducing TiSmile</b> - Unlock with a smile.</h4>
         <button onclick="window.location.href='index.html?app=11'" class="btn btn-primary">Open TiSmile Preferences</button><br>
