--- a/beta/index.html
+++ b/beta/index.html
@@ -212,7 +212,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
        </div>
        <br><br><br>
        <h4>Tiles</h4>
-       <div id="tileSettings">
+       <div id="tileSettings" style="">
         <button onclick="backupTiles('TilesBackup.txt', localStorage.files)" class="btn btn-primary">Backup Tiles</button>
         <button onclick="restoreTiles()" class="btn btn-primary">Restore Tiles</button><br><br>
         <button onclick="lastTile()" class="btn btn-success">Open The Last Opened Tile</button><br><br>
