--- a/beta/login.html
+++ b/beta/login.html
@@ -9,6 +9,7 @@
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/style2.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/style.css" crossorigin="anonymous">
+    <link rel="SHORTCUT ICON" href="other resources/favicon.ico">
     <title>Login - TiMedia</title>
   </head>
   <body>
