--- a/beta/index.html
+++ b/beta/index.html
@@ -293,7 +293,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <h3>TiSlides</h3>
   <canvas id="tislides-canvas" width="1000" height="600" style="border:1px solid #d3d3d3;"></canvas><br>
   <button class="btn btn-primary" id="tislides-add" onclick="addText()">Add Text</button>
-  <button class="btn btn-primary" id="tislides-save" onclick="saveSlide()">Save</button>
+  <!--<button class="btn btn-primary" id="tislides-save" onclick="saveSlide()">Save</button>-->
 </div>
 <div id="tismile" style="display: none;">
   <h3>TiSmile <b>Beta</b></h3>
