--- a/beta/index.html
+++ b/beta/index.html
@@ -91,7 +91,8 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 
 </div>
   
-    <input id="chat" class="form-control" style="display: none;" autofocus onchange="joinChat()">
+   <input id="chat" class="form-control" style="display: none;" autofocus><br>
+   <button id="joinChatBtn" onclick="joinChat()" class="btn btn-primary" style="display: none;">Chat With User</button>
     <div style="display: none" id="tiritype">
     <center>
       <h1 id="tiri"></h1><br>
