--- a/beta/index.html
+++ b/beta/index.html
@@ -15,7 +15,7 @@
     <link rel="SHORTCUT ICON" href="other resources/favicon.ico">
     <title>Home - TiMedia</title>
   </head>
-  <body id="body">
+  <body id="body" class="task">
     <nav class="navbar navbar-inverse" id="navbar">
       <div class="container-fluid">
         <div class="navbar-header">
