--- a/beta/index.html
+++ b/beta/index.html
@@ -320,13 +320,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <nav id="context-menu" class="context-menu">
     <ul class="context-menu__items">
       <li class="context-menu__item">
-        <a href="#" class="context-menu__link" data-action="View"><i class="fa fa-eye"></i> View Task</a>
-      </li>
-      <li class="context-menu__item">
-        <a href="#" class="context-menu__link" data-action="Edit"><i class="fa fa-edit"></i> Edit Task</a>
-      </li>
-      <li class="context-menu__item">
-        <a href="#" class="context-menu__link" data-action="Delete"><i class="fa fa-times"></i> Delete Task</a>
+        <a href="https://proudloyaltier.github.io/timedia/beta/index.html?app=7" class="context-menu__link"><i class="fa fa-eye"></i> Tiles</a>
       </li>
     </ul>
   </nav>
