--- a/beta/index.html
+++ b/beta/index.html
@@ -320,7 +320,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <nav id="context-menu" class="context-menu">
     <ul class="context-menu__items">
       <li class="context-menu__item">
-        <a href="https://proudloyaltier.github.io/timedia/beta/index.html?app=7" class="context-menu__link"><i class="fa fa-eye"></i> Tiles</a>
+        <a href="#" class="context-menu__link"><i class="fa fa-eye"></i> Context menu</a>
       </li>
     </ul>
   </nav>
