--- a/beta/index.html
+++ b/beta/index.html
@@ -320,7 +320,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <nav id="context-menu" class="context-menu">
     <ul class="context-menu__items">
       <li class="context-menu__item">
-        <a href="#" class="context-menu__link"><i class="fa fa-eye"></i> Context menu</a>
+        <a href="?app=6" class="context-menu__link"><span class="glyphicon glyphicon-cog"</span>Settings</a>
       </li>
     </ul>
   </nav>
