--- a/beta/index.html
+++ b/beta/index.html
@@ -316,15 +316,15 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     </center>
   </div>
 </div>
-  <!--context menu---------------------------------------------------------------------------------------------------------------->      
+  <!--context menu-->      
   <nav id="context-menu" class="context-menu">
     <ul class="context-menu__items">
       <li class="context-menu__item">
-        <a href="?app=6" class="context-menu__link"><span class="glyphicon glyphicon-cog"</span>Settings</a>
+      <a href="?app=6" class="context-menu__link">Settings</a>
       </li>
     </ul>
   </nav>
-  <!--end of context menu -------------------------------------------------------------------------------------------------------->
+  <!--end of context menu -->
 <h5 style="display: none;" id="view"></h5><br>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
     <script src="js/home.js"></script>
