--- a/beta/index.html
+++ b/beta/index.html
@@ -320,7 +320,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <nav id="context-menu" class="context-menu">
     <ul class="context-menu__items">
       <li class="context-menu__item">
-      <a href="?app=6" class="context-menu__link">Settings</a>
+      <a href="index.html?app=6">Settings</a>
       </li>
     </ul>
   </nav>
