--- a/beta/index.html
+++ b/beta/index.html
@@ -320,7 +320,16 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <nav id="context-menu" class="context-menu">
     <ul class="context-menu__items">
       <li class="context-menu__item">
-      <a href="index.html?app=6">Settings</a>
+      <a href="index.html?app=6">    Settings</a>
+      </li>
+      <li class="context-menu__item">
+      <a href="index.html?app=7">    Tiles</a>
+      </li>
+      <li class="context-menu__item">
+      <a href="index.html">    Home</a>
+      </li>
+      <li class="context-menu__item">
+      <a href="index.html?app=11">    TiSmile Quick Start</a>
       </li>
     </ul>
   </nav>
