--- a/beta/index.html
+++ b/beta/index.html
@@ -329,7 +329,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <a href="index.html">    Home</a>
       </li>
       <li class="context-menu__item">
-      <a href="index.html?app=11">    TiSmile Quick Start</a>
+      <a href="index.html?app=11">    TiSmile Setup</a>
       </li>
     </ul>
   </nav>
