--- a/beta/index.html
+++ b/beta/index.html
@@ -319,18 +319,14 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   <!--context menu-->      
   <nav id="context-menu" class="context-menu">
     <ul class="context-menu__items">
-      <li class="context-menu__item">
-      <a href="index.html?app=6">    Settings</a>
-      </li>
-      <li class="context-menu__item">
-      <a href="index.html?app=7">    Tiles</a>
-      </li>
-      <li class="context-menu__item">
-      <a href="index.html">    Home</a>
-      </li>
-      <li class="context-menu__item">
-      <a href="index.html?app=11">    TiSmile Setup</a>
-      </li>
+     <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a></li>
+     <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
+     <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
+     <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
+     <li role="separator" class="divider"></li>
+     <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
+     <li><a href="?app=4">TiSheets <span class="glyphicon glyphicon-th-list"></span></a></li>
+     <li><a href="?app=10">TiBookmarks <span class="glyphicon glyphicon-bookmark"></span></a></li>
     </ul>
   </nav>
   <!--end of context menu -->
