--- a/beta/index.html
+++ b/beta/index.html
@@ -241,7 +241,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button onclick="save()" class="btn btn-primary">Save Tiles</button>
       <button onclick='getFromDatabase("files");' class="btn btn-success">Refresh Tiles</button><br><br>
 -->
-       <button id="tiles-folderbtn" onclick="addFolder()" class="btn btn-primary">Add Folder</button><br>
+       <button id="tiles-folderbtn" onclick="addFolder()" class="btn btn-primary">Add Folder</button>
        <button id="tiles-back" onclick="closeFolder()" style="display: none;" class="btn btn-primary">Back</button><br>
        <div id="tiles-tiles" class="nobullet">
          You have no Tiles.
