--- a/beta/index.html
+++ b/beta/index.html
@@ -249,6 +249,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
        <div id="tiles-searchbox" class="nobullet" style="display: none;">
        </div>
        <div id="tiles-folder" class="nobullet" style="display: none;">
+         <button class="btn btn-primary" onclick="addFileToFolder()">Add Tile</button>
        </div>
   </div>
  <div id="tisheets" style="display: none;">
