--- a/beta/index.html
+++ b/beta/index.html
@@ -242,14 +242,14 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
       <button onclick='getFromDatabase("files");' class="btn btn-success">Refresh Tiles</button><br><br>
 -->
        <button id="tiles-folderbtn" onclick="addFolder()" class="btn btn-primary">Add Folder</button>
-       <button id="tiles-back" onclick="closeFolder()" style="display: none;" class="btn btn-primary">Back</button><br><br>
+       <button id="tiles-back" onclick="closeFolder()" style="display: none;" class="btn btn-primary">Back</button>
+       <button id="tiles-at" class="btn btn-primary" onclick="addFileToFolder()" style="display: none;">Add Tile</button><br><br>
        <div id="tiles-tiles" class="nobullet">
          You have no Tiles.
        </div>
        <div id="tiles-searchbox" class="nobullet" style="display: none;">
        </div>
        <div id="tiles-folder" class="nobullet" style="display: none;">
-         <button class="btn btn-primary" onclick="addFileToFolder()">Add Tile</button>
        </div>
   </div>
  <div id="tisheets" style="display: none;">
