--- a/beta/index.html
+++ b/beta/index.html
@@ -243,6 +243,8 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 -->
        <button id="tiles-folderbtn" onclick="addFolder()" class="btn btn-primary">Add Folder</button>
        <button id="tiles-back" onclick="closeFolder()" style="display: none;" class="btn btn-primary">Back</button>
+       <button id="tiles-mth" onclick="moveFile()" class="btn btn-primary">Move Tile Here</button>
+    
        <div id="tiles-tiles" class="nobullet">
          You have no Tiles.
        </div>
