--- a/beta/look.html
+++ b/beta/look.html
@@ -12,6 +12,9 @@
   <h1 id="tiri"></h1><br>
   <input class="form-control input-lg" type="text" id="tiri-box" onchange="tt()" placeholder="Type here or speak now." autofocus>
 </center>
-<script src="js/tiri.js"></script>
+  <script src="js/speech.js"></script>
+  <script src="js/annyang.js"></script>
+  <script src="js/math.min.js"></script>
+  <script src="js/tiri.js"></script>
 </body>
 </html>
