--- a/beta/look.html
+++ b/beta/look.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 <center>
-  <h1 id="tiri"></h1><br>
-  <input class="form-control input-lg" type="text" id="tiri-box" onchange="tt()" placeholder="Type here or speak now." autofocus>
+  <div class="container">
+    <h1 id="tiri"></h1><br>
+    <input class="form-control input-lg" type="text" id="tiri-box" onchange="tt()" placeholder="Type here or speak now." autofocus>
+  </div>
 </center>
   <script src="js/speech.js"></script>
   <script src="js/annyang.js"></script>
