--- a/beta/index.html
+++ b/beta/index.html
@@ -195,7 +195,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   
      <div id="settings" style="display: none;">
        <h3>Settings</h3><br>
-       <h4> Personalization </h4>
+       <h4 onclick="sspersonal()"> Personalization </h4>
        <div id="personalizationSettings">
          Background Image<br>
         <input class="form-control" type="text" id="backgroundImg"><br>
@@ -205,7 +205,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
         <button onclick="updateSettings()" class="btn btn-success">Save</button>
        </div>
        <br><br><br>
-       <h4>Tiles</h4>
+       <h4 onclick="sstiles()">Tiles</h4>
        <div id="tileSettings" style="">
         <button onclick="backupTiles('TilesBackup.txt', localStorage.files)" class="btn btn-primary">Backup Tiles</button>
         <button onclick="restoreTiles()" class="btn btn-primary">Restore Tiles</button><br><br>
@@ -213,8 +213,8 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
         <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br>
        </div>
        <br>
+       <h4 onclick="sstismile()"> TiSmile </h4>
        <div id="tismileSettings">
-         <h4> TiSmile </h4>
          <img src="other resources/smile.png" width="100" height="100"><br>
          <h4><b>Introducing TiSmile</b> - Unlock with a smile.</h4>
         <button onclick="window.location.href='index.html?app=11'" class="btn btn-primary">Open TiSmile Preferences</button><br>
