--- a/beta/index.html
+++ b/beta/index.html
@@ -214,7 +214,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
         <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br>
        </div>
        <br>
-       <h4 onclick="sstismile()"> TiSmile </h4>
+       <h4 id="ti-smile-settings-text" onclick="sstismile()"> TiSmile </h4>
        <div id="tismileSettings">
          <img src="other resources/smile.png" width="100" height="100"><br>
          <h4><b>Introducing TiSmile</b> - Unlock with a smile.</h4>
