--- a/beta/index.html
+++ b/beta/index.html
@@ -195,7 +195,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   
      <div id="settings" style="display: none;">
        <h3>Settings</h3><br>
-       <h4 onclick="sspersonal()"> Personalization <span class="glyphicon glyphicon-arrow-down"></span></h4>
+       <h4 onclick="sspersonal()"> Personalization <span class="glyphicon glyphicon-menu-down"></span></h4>
        <div id="personalizationSettings">
          Background Image<br>
         <input class="form-control" type="text" id="backgroundImg"><br>
@@ -206,7 +206,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
          <br><br>
        </div>
        <br>
-       <h4 onclick="sstiles()">Tiles  <span class="glyphicon glyphicon-arrow-down"></span></h4>
+       <h4 onclick="sstiles()">Tiles  <span class="glyphicon glyphicon-menu-down"></span></h4>
        <div id="tileSettings" style="">
         <button onclick="backupTiles('TilesBackup.txt', localStorage.files)" class="btn btn-primary">Backup Tiles</button>
         <button onclick="restoreTiles()" class="btn btn-primary">Restore Tiles</button><br><br>
@@ -214,7 +214,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
         <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br>
        </div>
        <br>
-       <h4 id="ti-smile-settings-text" onclick="sstismile()"> TiSmile  <span class="glyphicon glyphicon-arrow-down"></span></h4>
+       <h4 id="ti-smile-settings-text" onclick="sstismile()"> TiSmile  <span class="glyphicon glyphicon-menu-down"></span></h4>
        <div id="tismileSettings">
          <img src="other resources/smile.png" width="100" height="100"><br>
          <h4><b>Introducing TiSmile</b> - Unlock with a smile.</h4>
