--- a/beta/index.html
+++ b/beta/index.html
@@ -254,7 +254,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     
     <a href="?app=3" class="buttons"><center><span style="font-size:30px;" class="glyphicon glyphicon-pencil"></center></span></a>
 
-    <a class="buttons"><center><span style="font-size:30px;" class="glyphicon glyphicon-plus"></span></center>
+    <a class="buttons"><center><span style="font-size:30px; padding: 10px;" class="glyphicon glyphicon-plus"></span></center>
     </a>
   </nav>
   </div>
