--- a/beta/index.html
+++ b/beta/index.html
@@ -244,7 +244,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   </div>
  <div id="tisheets" style="display: none;">
   <h3>TiSheets</h3>
-   <input id="docsTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
+   <input id="sheetsTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
    <style>
      table, th, td {
         border: 1px solid gray;
