--- a/beta/index.html
+++ b/beta/index.html
@@ -159,7 +159,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
   </div>
    <div style="display: none;" id="tibookmarks">
     <h3>TiBookmarks</h3><br>
-     <input id="tibookmarksTitle" class="form-control lg" value="Untitled Spreadsheet"><br>
+     <input id="tibookmarksTitle" class="form-control lg" value="Untitled Bookmark"><br>
     <div id="createBookmark">
       <h4 style="outline: none;" id="content" contenteditable="true"></h4><br>
 
