--- a/beta/index.html
+++ b/beta/index.html
@@ -312,6 +312,12 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     </center>
   </div>
 </div>
+  
+<div id="tiphotos" style="display: none;">
+  <h3>TiPhotos</h3><br>
+  <div id="photos"></div>
+</div>
+  
   <!--context menu-->      
   <nav id="context-menu" class="context-menu">
     <ul class="context-menu__items">
@@ -350,6 +356,7 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
     <script src="js/tiles.js"></script>
     <script src="js/settings.js"></script>
     <script src="js/messages.js"></script> 
+    <script src="js/photos.js"></script> 
    </div>
   </body>
 </html>
