--- a/beta/tishare/index.html
+++ b/beta/tishare/index.html
@@ -4,6 +4,7 @@
   <title>TiShare</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://proudloyaltier.github.io/timedia/beta/other resources/style.css" crossorigin="anonymous">
+  <link rel="SHORTCUT ICON" href="https://proudloyaltier.github.io/timedia/beta/other resources/favicon.ico">
 </head>
 <body>
 <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
