--- a/beta/tishare/index.html
+++ b/beta/tishare/index.html
@@ -18,6 +18,7 @@
   <div id="upload">
     <button style="width: 300px; height: 150px;" class="btn btn-primary" onclick="chooseFile()">Upload</button><br>
     <input type="text" class="form-control lg" onchange="shareLink(this.value)">
+  </div>
   <span id="success" style="display: none;" class="glyphicon glyphicon-check"></span><br>
 </center>
   
