--- a/beta/tishare/index.html
+++ b/beta/tishare/index.html
@@ -15,7 +15,7 @@
   <img id="image" width="500px">
   <video id="video" style="display: none;" controls></video>
   <audio id="audio" style="display: none;" controls></audio><br>
-  <div id="upload">
+  <div id="upload" class="container">
     <button style="width: 300px; height: 150px;" class="btn btn-primary" onclick="chooseFile()">Upload</button><br>
     <input type="text" class="form-control lg" onchange="shareLink(this.value)">
   </div>
